--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span>WhatsApp</span>
                 </a>
 
-                <a href="#" class="btn instagram" target="_blank">
+                <a href="https://www.instagram.com/nnmult?utm_source=qr&igsh=OXF3ajY0NDI0MzNv" class="btn instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                     <span>Instagram</span>
                 </a>
